--- a/public/back/login.html
+++ b/public/back/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <title>登录页</title>
 </head>
 
@@ -19,17 +20,17 @@
                     <h3 class="panel-title">后台管理系统</h3>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" id="form">
                         <div class="form-group">
                             <label for="username" class="col-sm-3 control-label">用户名：</label>
                             <div class="col-sm-9">
-                                <input type="email" class="form-control" id="username" placeholder="请输入用户名">
+                                <input type="text" name="username" class="form-control" id="username" placeholder="请输入用户名">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="col-sm-3 control-label">密　码：</label>
                             <div class="col-sm-9">
-                                <input type="password" class="form-control" id="password" placeholder="请输入密码">
+                                <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
                             </div>
                         </div>
                         <div class="form-group">
@@ -46,6 +47,8 @@
     </div>
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
