--- a/public/back2老师的代码/user.html
+++ b/public/back2老师的代码/user.html
@@ -27,13 +27,13 @@
   <!-- 导航 -->
   <div class="nav">
     <ul>
-      <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+      <li><a class="current" href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
       <li>
         <a href="javascript:;" id="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
         <!-- 用于切换显示的二级列表 -->
-        <div class="child" style="display: block">
+        <div class="child">
           <a href="first.html">一级分类</a>
-          <a class="current"  href="second.html">二级分类</a>
+          <a href="second.html">二级分类</a>
         </div>
       </li>
       <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
@@ -57,13 +57,60 @@
     <!-- 链接导航, 路径导航 -->
     <ol class="breadcrumb mt_20">
       <li><a href="index.html">管理系统</a></li>
-      <li class="active">分类管理</li>
-      <li class="active">二级分类</li>
+      <li class="active">用户管理</li>
     </ol>
+
+    <div class="lt_content">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>用户名</th>
+            <th>手机号</th>
+            <th>状态</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 挖个坑 -->
+        </tbody>
+      </table>
+
+
+      <div class="text-right">
+        <!-- 准备一个分页容器, bootstrap 3 的版本要求是 ul -->
+        <ul id="paginator"></ul>
+      </div>
+
+    </div>
 
 
   </div>
 
+</div>
+
+
+<!-- 启用禁用模态框 -->
+<div class="modal fade" tabindex="-1" id="userModal">
+  <!-- 内层模态框 -->
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <!-- 头部 -->
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h4 class="modal-title">温馨提示</h4>
+      </div>
+      <!-- 主体 -->
+      <div class="modal-body">
+        <p class="red"><i class="glyphicon glyphicon-info-sign"></i><span>你确定要执行此操作吗？</span></p>
+      </div>
+      <!-- 底部 -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="submitBtn">确定</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -93,14 +140,43 @@
   </div>
 </div>
 
+<!--
+  type 类型 可以是 text/html  也可以 text/template
+-->
+<script type="text/html" id="tmp">
+  {{ each rows v i }}
+    <tr>
+      <!-- 当前页第几条 + 前面页总计多少条(page-1)*size -->
+      <td>{{ i+1 + (page-1)*size }}</td>
+      <td>{{ v.username }}</td>
+      <td>{{ v.mobile }}</td>
+      <!-- isDelete 用于标记当前用户状态
+           1 表示 已启用
+           0 表示 已禁用
+      -->
+      <td>{{ v.isDelete === 1 ? "正常" : "已禁用" }}</td>
+      <td data-id="{{ v.id }}">
+        {{ if v.isDelete === 1 }}
+          <button class="btn btn-danger">禁用</button>
+        {{ else }}
+          <button class="btn btn-success">启用</button>
+        {{ /if }}
+      </td>
+    </tr>
+  {{ /each }}
+</script>
+
 
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/isLogin.js"></script>
+<script src="./js/user.js"></script>
 
 
 </body>
