--- a/public/back3第二遍/index.html
+++ b/public/back3第二遍/index.html
@@ -5,11 +5,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>乐淘首页</title>
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
 
 <body>
-    我是首页~~
+    <!-- 首页左侧 -->
+    <div class="lt_left">
+        <!-- 头部 -->
+        <div class="lt_title">
+            <a href="#">前端30期棒呆~</a>
+        </div>
+        <div class="user">
+            <img src="./images/02.jpg" alt="">
+            <p>迷人的微笑</p>
+        </div>
+        <ul>
+            <li><a href="#"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+            <li class="cateBtn"><a href="#"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
+                <div class="child">
+                    <a href="#">一级分类</a>
+                    <a href="#">二级分类</a>
+                </div>
+            </li>
+            <li><a href="#"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+        </ul>
+    </div>
+    <!-- 首页核心内容 -->
+    <div class="lt_content">
+        <!-- 头部 -->
+        <div class="lt_top">
+            <a href="#" class="icon-left pull-left"><i class="glyphicon glyphicon-align-justify"></i></a>
+            <a href="#" class="icon-right pull-right"><i class="glyphicon glyphicon-log-out"></i></a>
+        </div>
+        <div class="lt_main">
+            <!-- 流失布局 -->
+            <div class="container-fluid">
+                <!-- 路径导航 -->
+                <ol class="breadcrumb mt_20">
+                    <li><a href="#">管理系统</a></li>
+                    <li class="active">首页</li>
+                </ol>
+
+            </div>
+        </div>
+    </div>
+    <!-- 模态框 -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                    <span>您确定要退出后台管理系统吗？</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary">退出</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <script src="./lib/jquery/jquery.js"></script>
+    <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <script src="./js/common.js"></script>
 </body>
 
 </html>
