--- a/public/back第一遍/user.html
+++ b/public/back第一遍/user.html
@@ -57,13 +57,56 @@
                     <li><a href="#">管理系统</a></li>
                     <li class="active">用户管理</li>
                 </ol>
+                <!-- 表格区域 -->
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>序号</th>
+                            <th>用户名</th>
+                            <th>手机号</th>
+                            <th>状态</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- 动态渲染 -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+    <!-- 模板引擎模板 -->
+    <script type='text/html' id="tmp">
+        {{each rows v i}}
+        <!-- isDelete 1正常  0已禁用-->
+        <tr>
+            <td>1</td>
+            <td>{{v.username}}</td>
+            <td>{{v.mobile}}</td>
+            <td>{{v.isDelete === 1 ? '正常':'已禁用'}}</td>
+            <td>
+                {{if v.isDelete === 1}}
+              <button class="btn btn-success">禁用</button>
+              {{else}}
+              <button class="btn btn-danger">启用</button>
+              {{/if}}
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+
+
     <script src="./lib/jquery/jquery.js"></script>
+    <!-- 响应式布局插件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 进度条插件 -->
     <script src="./lib/nprogress/nprogress.js"></script>
+    <!-- 模板引擎插件 -->
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <!-- 公共功能插件   自定义 -->
     <script src="./js/common.js"></script>
+    <!-- 自身的js功能 -->
+    <script src="./js/user.js"></script>
 </body>
 
 </html>
