用户管理页面功能全部实现

--- a/public/back第一遍/first.html
+++ b/public/back第一遍/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘首页</title>
+    <title>一级分类页</title>
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./css/common.css">
@@ -24,14 +24,14 @@
         <!-- 菜单导航区域 -->
         <ul>
             <li>
-                <a href="user.html"> <i class="glyphicon glyphicon-user"></i><span>用户管理</span>
+                <a href="user.html" class="current"> <i class="glyphicon glyphicon-user"></i><span>用户管理</span>
                 </a>
             </li>
             <li>
                 <a href="javascript:;" id='change'> <i class="glyphicon glyphicon-list"></i><span>分类管理</span>
                 </a>
-                <div class="child" style="display:block">
-                    <a href="first.html" class="current">一级分类</a>
+                <div class="child">
+                    <a href="first.html">一级分类</a>
                     <a href="second.html">二级分类</a>
                 </div>
             </li>
@@ -55,16 +55,47 @@
                 <!-- 路径导航 -->
                 <ol class="breadcrumb mt_20">
                     <li><a href="#">管理系统</a></li>
-                    <li class="active">分类管理</li>
-                    <li class="active">一级分类</li>
+                    <li class="active">用户管理</li>
                 </ol>
             </div>
         </div>
     </div>
+    <!-- 退出模态框 -->
+    <div class="modal fade" tabindex="-1" id="myModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        温馨提示
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                    <span> 您确定要退出后台管理系统吗</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="exit">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./lib/jquery/jquery.js"></script>
+    <!-- 响应式布局插件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 分页的插件 -->
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+    <!-- 进度条插件 -->
     <script src="./lib/nprogress/nprogress.js"></script>
+    <!-- 模板引擎插件 -->
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <!-- 公共功能插件   自定义 -->
     <script src="./js/common.js"></script>
+    <!-- 用来判断用户是否登陆过的js功能  自定义 -->
+    <script src="./js/islogin.js"></script>
+    <!-- 自身的js功能 -->
+    <script src="./js/user.js"></script>
 </body>
 
 </html>
