--- a/public/back第一遍/index.html
+++ b/public/back第一遍/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <!-- 模态框 -->
+    <!-- 退出模态框 -->
     <div class="modal fade" tabindex="-1" id="myModal">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
