--- a/public/back第一遍/first.html
+++ b/public/back第一遍/first.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>一级分类页</title>
-    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
 
@@ -58,7 +59,7 @@
                     <li class="active">用户管理</li>
                 </ol>
                 <!-- 添加分类按钮 -->
-                <button class="btn btn-default">添加分类</button>
+                <button class="btn btn-default" id="addBtn">添加分类</button>
                 <!-- 内容表格区域 -->
                 <table class="table table-bordered table-hover mt_20">
                     <thead>
@@ -72,6 +73,11 @@
                     </tbody>
                 </table>
 
+                <!-- 控制分页容器位置的盒子 -->
+                <div class="text-right">
+                    <!-- 分页容器 -->
+                    <ul id="pagintor"></ul>
+                </div>
             </div>
         </div>
     </div>
@@ -97,18 +103,51 @@
         </div>
     </div>
 
+    <!-- 添加分类模态框 -->
+    <div class="modal fade" tabindex="-1" id="addModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <!-- 用于表单验证和提交 -->
+                <form id="form">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        <h4 class="modal-title">
+                            添加分类
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="categoryName" placeholder="请输入一级分类">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary">添加</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <!-- 模板引擎 -->
     <script type="text/html" id="first">
         {{each rows v i}}
         <tr>
-           <td>{{i+1}}</td>
+           <td>{{i+1 +(page-1)*size}}</td>
           <td>{{v.categoryName}}</td>
         </tr>
         {{/each}}
     </script>
+
+
+
+
     <script src="./lib/jquery/jquery.js"></script>
     <!-- 响应式布局插件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 表单验证插件 -->
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
     <!-- 分页的插件 -->
     <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
     <!-- 进度条插件 -->
