--- a/public/back第一遍/first.html
+++ b/public/back第一遍/first.html
@@ -25,14 +25,14 @@
         <!-- 菜单导航区域 -->
         <ul>
             <li>
-                <a href="user.html" class="current"> <i class="glyphicon glyphicon-user"></i><span>用户管理</span>
+                <a href="user.html"> <i class="glyphicon glyphicon-user"></i><span>用户管理</span>
                 </a>
             </li>
             <li>
                 <a href="javascript:;" id='change'> <i class="glyphicon glyphicon-list"></i><span>分类管理</span>
                 </a>
-                <div class="child">
-                    <a href="first.html">一级分类</a>
+                <div class="child" style="display:block">
+                    <a href="first.html" class="current">一级分类</a>
                     <a href="second.html">二级分类</a>
                 </div>
             </li>
@@ -108,13 +108,14 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <!-- 用于表单验证和提交 -->
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        添加分类
+                    </h4>
+                </div>
                 <form id="form">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                        <h4 class="modal-title">
-                            添加分类
-                        </h4>
-                    </div>
                     <div class="modal-body">
                         <div class="form-group">
                             <input type="text" class="form-control" name="categoryName" placeholder="请输入一级分类">
@@ -122,7 +123,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="submit" class="btn btn-primary">添加</button>
+                        <button type="submit" class="btn btn-primary" id="addBtn">添加</button>
                     </div>
                 </form>
             </div>
