二级分类功能部分实现

--- a/public/back第一遍/first.html
+++ b/public/back第一遍/first.html
@@ -56,7 +56,8 @@
                 <!-- 路径导航 -->
                 <ol class="breadcrumb mt_20">
                     <li><a href="#">管理系统</a></li>
-                    <li class="active">用户管理</li>
+                    <li class="active">分类管理</li>
+                    <li class="active">一级分类</li>
                 </ol>
                 <!-- 添加分类按钮 -->
                 <button class="btn btn-default" id="addBtn">添加分类</button>
@@ -123,7 +124,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="submit" class="btn btn-primary" id="addBtn">添加</button>
+                        <button type='submit' class="btn btn-primary" id="addBtn">添加</button>
                     </div>
                 </form>
             </div>
