--- a/public/back第一遍/second.html
+++ b/public/back第一遍/second.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘首页</title>
-    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+    <title>二级分类页</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
 
@@ -58,13 +59,146 @@
                     <li class="active">分类管理</li>
                     <li class="active">二级分类</li>
                 </ol>
+                <!-- 添加分类按钮 -->
+                <button class="btn btn-default" id="addBtn2">添加分类</button>
+                <!-- 表格内容区域 -->
+                <table class="table table-bordered table-hover mt_20">
+                    <thead>
+                        <tr>
+                            <th> 序号</th>
+                            <th>一级分类名称</th>
+                            <th>二级分类名称</th>
+                            <th>二级分类LOGO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                <!-- 准备分页容器 -->
+                <div class="text-right">
+                    <ul id="pagintor"></ul>
+                </div>
             </div>
         </div>
     </div>
+    <!-- 退出模态框 -->
+    <div class="modal fade" tabindex="-1" id="myModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        温馨提示
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                    <span> 您确定要退出后台管理系统吗</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="exit">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 二级添加分类模态框 -->
+    <div class="modal fade" tabindex="-1" id="secModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        添加分类
+                    </h4>
+                </div>
+                <!-- 用于表单验证和提交 -->
+                <form id="form">
+                    <div class="modal-body">
+                        <!-- 下拉列表 -->
+                        <div class="form-group">
+                            <!-- 下拉菜单 -->
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown">
+                                    <span id="addtxt">请选择一级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" id="down">
+                                    <!-- 下拉列表模板引擎内容 -->
+                                </ul>
+                            </div>
+                            <input type="hidden" name="categoryId">
+                            <!-- 火热的品牌   1表示火热   0表示不火热   默认都火热 -->
+                            <input type="hidden" name="hot" value="1">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入二级分类">
+                        </div>
+                        <div class="form-group">
+                            <label for="fileupload" class="btn btn-default">上传图片</label>
+                            <input id="fileupload" type="file" name="pic1" data-url="/category/addSecondCategoryPic" style="display:none">
+                        </div>
+                        <div class="form-group">
+                            <img id="imgbox" src="./images/none.png" width="100px" height="100px">
+                            <input type="hidden" name="brandLogo">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary" id="addBtn">添加</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- 模板引擎模板创建表格动态数据获取 -->
+    <script type="type/html" id="second">
+        {{each rows v i}}
+         <tr>
+            <td>{{i+1+(page-1)*size}}</td>
+            <td>{{v.categoryName}}</td>
+            <td>{{v.brandName}}</td>
+            <td>
+               <img src="{{v.brandLogo}}" alt="" height="50px">
+            </td>
+         </tr>
+         {{/each}}
+    </script>
+    <!-- 下拉列表模板引擎创建 -->
+    <script type="type/html" id="list">
+        {{each rows v i}}
+        <li><a data-id={{v.id}} href="#">{{v.categoryName}}</a></li>
+        {{/each}}
+
+    </script>
+
+
+
+
     <script src="./lib/jquery/jquery.js"></script>
+    <!-- 响应式布局插件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 表单验证插件 -->
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <!-- 文件上传的插件 -->
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.iframe-transport.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+    <!-- 分页的插件 -->
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+    <!-- 进度条插件 -->
     <script src="./lib/nprogress/nprogress.js"></script>
+    <!-- 模板引擎插件 -->
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <!-- 公共功能插件   自定义 -->
     <script src="./js/common.js"></script>
+    <!-- 用来判断用户是否登陆过的js功能  自定义 -->
+    <script src="./js/islogin.js"></script>
+    <!-- 自身的js功能 -->
+    <script src="./js/second.js"></script>
 </body>
 
 </html>
