--- a/public/back第一遍/goods.html
+++ b/public/back第一遍/goods.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐淘首页</title>
-    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+    <title>商品管理页 </title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
 
@@ -30,7 +31,7 @@
             <li>
                 <a href="javascript:;" id='change'> <i class="glyphicon glyphicon-list"></i><span>分类管理</span>
                 </a>
-                <div class="child" style="display:block">
+                <div class="child" style="display:none">
                     <a href="first.html">一级分类</a>
                     <a href="second.html">二级分类</a>
                 </div>
@@ -57,13 +58,159 @@
                     <li><a href="#">管理系统</a></li>
                     <li class="active">商品管理</li>
                 </ol>
+                <!-- 添加分类按钮 -->
+                <button class="btn btn-default" id="addBtn">添加分类</button>
+                <!-- 表格区域 -->
+                <table class="table table-bordered table-hover mt_20">
+                    <thead>
+                        <tr>
+                            <th>序号</th>
+                            <th width='25%'>商品名称</th>
+                            <th width='25%'>商品描述</th>
+                            <th>商品库存</th>
+                            <th>商品尺寸</th>
+                            <th>商品状态</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- 模板引擎内容 -->
+                    </tbody>
+                </table>
+                <!-- 准备一个分页容器 -->
+                <div class="text-right">
+                    <ul id="pagintor"></ul>
+                </div>
             </div>
         </div>
     </div>
+    <!-- 退出模态框 -->
+    <div class="modal fade" tabindex="-1" id="myModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        温馨提示
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <i class="glyphicon glyphicon-info-sign"></i>
+                    <span> 您确定要退出后台管理系统吗</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="exit">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- 添加商品模态框 -->
+    <div class="modal fade" tabindex="-1" id="goodsModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">
+                        添加商品
+                    </h4>
+                </div>
+                <!-- 用于表单验证和提交 -->
+                <form id="form">
+                    <div class="modal-body">
+                        <!-- 下拉列表 -->
+                        <div class="form-group">
+                            <!-- 下拉菜单 -->
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown">
+                                    <span id="addtxt">请选择二级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" id="down">
+                                    <!-- 下拉列表模板引擎内容 -->
+                                </ul>
+                            </div>
+                            <input type="hidden" name="categoryId">
+                            <!-- 火热的品牌   1表示火热   0表示不火热   默认都火热 -->
+                            <input type="hidden" name="hot" value="1">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入商品名称">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" placeholder="请输入商品描述"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入商品库存">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入商品尺寸">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入商品原价">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="brandName" placeholder="请输入商品现价">
+                        </div>
+                        <div class="form-group">
+                            <label for="fileupload" class="btn btn-default">上传图片</label>
+                            <input id="fileupload" type="file" name="pic1" data-url="/category/addSecondCategoryPic"
+                                style="display:none">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary" id="goodsBtn">添加</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- 动态渲染数据内容 -->
+    <script type="text/html" id="goods">
+        {{each rows v i}}
+            <tr>
+                <td>{{i+1+(page-1)*size}}</td>
+                <td>{{v.proName}}</td>
+                <td>{{v.proDesc}}</td>
+                <td>{{v.num}}</td>
+                <td>{{v.size}}</td>
+                <td>{{v.statu===1?'已上架':'已下架'}}</td>
+                <td>
+                    {{if v.statu===1}}
+                    <button class="btn btn-danger">下架</button>
+                    {{else}}
+                    <button class="btn btn-success">上架</button>
+                    {{/if}}
+                </td>
+            </tr>
+       {{/each}}
+    </script>
     <script src="./lib/jquery/jquery.js"></script>
+    <!-- 响应式布局插件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 表单验证插件 -->
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <!-- 文件上传的插件 -->
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.iframe-transport.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+    <!-- 分页的插件 -->
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+    <!-- 进度条插件 -->
     <script src="./lib/nprogress/nprogress.js"></script>
+    <!-- 模板引擎插件 -->
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <!-- 公共功能插件   自定义 -->
     <script src="./js/common.js"></script>
+    <!-- 用来判断用户是否登陆过的js功能  自定义 -->
+    <script src="./js/islogin.js"></script>
+    <!-- 自定义的js -->
+    <script src="./js/goods.js"></script>
 </body>
 
 </html>
