利用swiper实现了轮播图的效果

--- a/public/front第一遍/index.html
+++ b/public/front第一遍/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
     <!-- 引入移动端的开发框架 -->
     <link rel="stylesheet" href="./lib/mui/css/mui.css">
+    <link rel="stylesheet" href="./lib/swiper轮播图/css/swiper.min.css">
     <!-- 引入自定义的公共样式 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -33,28 +34,48 @@
             <!-- 使用mui框架的区域滚动 -->
             <div class="mui-scroll-wrapper">
                 <div class="mui-scroll">
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
-                    <p>哈哈哈啊哈哈啊啊啊啊啊啊啊啊啊啊</p>
+                    <!-- 使用swiper轮播图 -->
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="./images/banner1.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/banner2.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/banner3.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/banner4.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/banner5.png" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/banner6.png" alt="">
+                            </div>
+                        </div>
+                        <!-- 如果需要分页器 -->
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
+                    <p>哈哈</p>
                 </div>
             </div>
         </div>
@@ -91,6 +112,7 @@
 
     <script src="./lib/mui/js/mui.js"></script>
     <script src="./lib/zepto/zepto.min.js"></script>
+    <script src="./lib/swiper轮播图/js/swiper.min.js"></script>
     <script src="./js/common.js"></script>
 </body>
 
